<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SD Play</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_top">Show Top</string>
    <string name="action_show_fs_top">Show Top</string>
    <string name="about">About</string>
    <string name="welcome_text">Hello world!</string>
    <string name="start">Start</string>
    <string name="wait">Please wait</string>
    <string name="read_all">Read All Records</string>
    <string name="all_test">Start Full Test</string>
    <string name="details">Storage manufacturer</string>
    <string name="nickname">Notes (optional)</string>
    <string name="custom_path">Custom storage for test</string>
    <string name="custom_edit">Edit</string>
    <string name="change_media">Change Media</string>
    <string name="read_rnd">Random Read</string>
    <string name="refresh">Refresh</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="hide">Hide/Show Refs</string>
    <string name="show_all">All/Top</string>
    <string name="chart">Chart</string>
    <string name="fs_test">FS Test</string>
    <string name="createFs">Create</string>
    <string name="listFs">List</string>
    <string name="readSmall">R/Sm</string>
    <string name="writeMed">W/5M</string>
    <string name="readMed">R/5M</string>
    <string name="writeL">W/100M</string>
    <string name="readL">R/100M</string>
    <string name="delFs">Del</string>
    <string name="smOper">Small files thrashing</string>
    <string name="medOper">Medium files write/read</string>
    <string name="lOper">Large files write/read</string>
    <string name="iopsOper">IOPS (4K) write/read</string>
    <string name="write">DB Test</string>
    <string name="rnd_io">Random Write</string>
    <string name="internal">Internal Storage</string>
    <string name="external">External SD card</string>
    <string name="title_activity_bench_start">SD card Benchmark</string>
    <string name="hello_world">Hello world!</string>
    <string name="ID">#</string>
    <string name="fdetails">Details</string>
    <string name="build_id">Build</string>
    <string name="fs_type">FS</string>
    <string name="nick">Notes</string>
    <string name="writes">Insert</string>
    <string name="journal">Mode</string>
    <string name="db_inserts">DB Insert</string>
    <string name="read">Select All</string>
    <string name="delete">Delete</string>
    <string name="rwrite">Update</string>
    <string name="rread">Select</string>
    <string name="total_db">DB Score</string>
    <string name="total_fs">FS Score</string>
    <string name="total_sum">Score</string>
    <string name="dev_size">Device size: </string>
    <string name="devsize">Size</string>
    <string name="total_space">Total user space: </string>
    <string name="free_space">Free user space: </string>
    <string name="title_activity_settings_fragment">Settings</string>
    <string name="title_activity_set_preferences">Set Preferences</string>
    <string name="title_activity_set_user_options">Set Parameters for Run</string>
    <string name="title_activity_my_res_dbhelper">MyResDBHelper</string>
    <string name="title_activity_top_results">Top Results</string>
    <string name="title_activity_storage_details">Storage Info</string>
    <string name="title_activity_show_chart">Top Results Chart</string>
    <string name="title_activity_show_top_fs_res">ShowTopFsRes</string>
    <string name="title_activity_summary_view">Summary View</string>

</resources>
