<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#6495ed"
            android:orientation="horizontal" >

            <!-- 
            <TextView
                android:id="@+id/ID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:text="@string/ID"
                android:textStyle="bold"
                 />
                  -->

            <TextView
                android:id="@+id/details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="2dp"
                android:text="@string/fdetails"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginLeft="2dp"
                android:text="@string/nick"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/build"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="2dp"
                android:text="@string/build_id"
                android:textStyle="bold" />
            
            <TextView
                android:id="@+id/fs_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.2"
                android:layout_marginLeft="2dp"
                android:text="@string/fs_type"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/write"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginLeft="4dp"
                android:text="@string/writes"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/read"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="2dp"
                android:text="@string/read"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rwrite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginLeft="2dp"
                android:text="@string/rwrite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rread"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginLeft="2dp"
                android:text="@string/rread"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginLeft="2dp"
                android:text="@string/total_db"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/topRes"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:columnWidth="50dp"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth" >
        </ListView>

        <LinearLayout
            android:id="@+id/layoutButtonsTop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp" >

            <Button 
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onBackClick"
                android:text="@string/back" />
            <Button 
                android:id="@+id/btnHide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onHideClick"
                android:text="@string/hide" />
            <Button 
                android:id="@+id/btnShowAll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onShowAllClick"
                android:text="@string/show_all" />
            <Button 
                android:id="@+id/buttonChangeMedia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onChangeMedia"
                android:text="@string/change_media" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>