<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/headersFs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#6495ed"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/detailsFs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="3"
                        android:text="@string/fdetails"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nickFs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="2"
                        android:text="@string/nick"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/buildFs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="3"
                        android:text="@string/build_id"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fs_typeFs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="2.2"
                        android:text="@string/fs_type"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/smOper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="3"
                        android:text="@string/smOper"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/medOper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="3"
                        android:text="@string/medOper"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lOper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="3"
                        android:text="@string/lOper"
                        android:textStyle="bold" />
                    
                    <TextView
                        android:id="@+id/iopsOper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="3"
                        android:text="@string/iopsOper"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/totalFs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="2.2"
                        android:text="@string/total_fs"
                        android:textStyle="bold" />
                </LinearLayout>

                <ListView
                    android:id="@+id/topResFs"
                    android:layout_width="fill_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:columnWidth="50dp"
                    android:gravity="center"
                    android:numColumns="auto_fit"
                    android:stretchMode="columnWidth"
                     >
                </ListView>

            <LinearLayout
                android:id="@+id/layoutButtonsTopFs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp" >

                <Button
                    android:id="@+id/btnBackFs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onBackClick"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/btnHideFs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="onHideClick"
                    android:text="@string/hide" />

                <Button
                    android:id="@+id/btnShowAllFs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onShowAllClick"
                    android:text="@string/show_all" />

                <Button
                    android:id="@+id/buttonChangeMediaFs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="onChangeMedia"
                    android:text="@string/change_media" />
            </LinearLayout>
    </LinearLayout>

</RelativeLayout>