<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pick_path"
        android:layout_alignParentLeft="true" />

   <RadioGroup
        android:id="@+id/pick_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >
    </RadioGroup>

    <TextView
        android:id="@+id/custom_path"
        android:layout_width="@+id/buttonCustomEdit"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/pick_path"
        android:layout_toLeftOf="@id/buttonCustomEdit"
        android:layout_alignBaseline="@id/buttonCustomEdit"
        android:textSize="18sp" />

    <Button
            android:id="@+id/buttonCustomEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pick_path"
            android:layout_alignParentRight="true"
            android:onClick="onCustomEditClick"
            android:text="@string/custom_edit" />

    <LinearLayout
        android:id="@+id/layoutButtonsMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp" >

        <Button
            android:id="@+id/buttonRefresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRefreshClick"
            android:text="@string/refresh" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onStartClick"
            android:text="@string/start" />
    </LinearLayout>

</RelativeLayout>